3.0.0 dev
- Added 'is' and 'has' to the getter analysis.
- Added half-asses plugin support, to replace the half-asses
  overwrites
- Added a event dispatcher.
- Added deeper search for the source code getter analysis for
  better results.
- Added a forced logger, which van be reached by \Krexx:log();
- Added a jumpTo element after uncollapsing the breadcrumbs for
  better usability.
- Change: Some internal renaming.
- Change: Removed the constants analysis configuration.
- Bugfix: The position of the search field of the hans skin is now
  calculated correct when the viewport is not on top.
- Bugfix: The scroll container detection of the hans skin works
  now.
- Bugfix: Added help text for the arrayCountLimit.
- Bugfix: "Resolving" of unresolvable inherited comment parts work
  now as expected.
- Bugfix: Prevent the registering of multiple fatal error handlers.
- Bugfix: Minimise interference with strange CSS styles.
- Bugfix: Do not render an unresolvable method analysis recursion
  when there are no methods to analyse in that specific class.
- Bugfix: The file service can now read the bottom of file more
  reliably.
- Bugfix: Prevent code generation for explicitly forbidden paths,
  when the recursion resolving is copying the original analysis
  into the forbidden path (try to say this fast and 4 times in a
  row).
- Bugfix: Removing of message keys should work again.
- Bugfix: Duplicate messages will not be displayed anymore.
- Bugfix: Fixed a possible fatal, when trying to analyse dynamically
  declared properties, which have a name collusion with private
  properties somewhere deeper in the class inheritance.
- Bugfix: Detect unset properties in classes.
- Bugfix: Added closing style tags to both skins
- Bugfix: Catch throwable in PHP 7.
- Bugfix: Removed the anoying speces from the hans template, so
  people can copy stuff better from the output.

2.4.0
- Added the method analysis to the recursion detection, to prevent