@@ -8,6 +8,8 @@
 - Added a forced logger, which van be reached by \Krexx:log();
 - Added a jumpTo element after uncollapsing the breadcrumbs for
   better usability.
+- The file logger writes the logfile right after the analysis is
+  complete.
 - Change: Some internal renaming.
 - Change: Removed the constants analysis configuration.
 - Bugfix: The position of the search field of the hans skin is now
